Fix overflowed contents in mobile device

--- a/assets/stylesheets/main.sass
+++ b/assets/stylesheets/main.sass
@@ -78,6 +78,8 @@ h1, h2, h3, h2, h5, h6
   figure
     margin-left: 0
     margin-right: 0
+    pre
+      overflow: auto
   pre, code
     padding: .063em
     border: .063em solid $very-light-gray
